opam-version: "2.0"
version: "0.1.1"
synopsis: "Property-based testing at ease"
description:
  "Popper (after Karl) is an OCaml library for writing regular unit tests as well as property-based tests. The design is inspired by the Python library Hypothesis and supports built-in shrinking for counter-examples."
maintainer: ["Joel Bjornson <joel.bjornson@gmail.com>"]
authors: ["Joel Bjornson <joel.bjornson@gmail.com>"]
license: "ISC"
homepage: "https://github.com/jobjo/popper"
doc: "https://jobjo.github.io/popper/"
bug-reports: "https://github.com/jobjo/popper/issues"
depends: [
  "pringo"
  "ocaml" {>= "4.09.1"}
  "dune" {>= "2.8"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/jobjo/popper.git"
