opam-version: "2.0"
version: "0.1.1"
synopsis: "A ppx deriving sample-functions for Popper"
description:
  "This ppx derives popper samplers and comparators for custom data-types."
maintainer: ["Joel Bjornson <joel.bjornson@gmail.com>"]
authors: ["Joel Bjornson <joel.bjornson@gmail.com>"]
license: "ISC"
homepage: "https://github.com/jobjo/popper"
doc: "https://jobjo.github.io/popper/"
bug-reports: "https://github.com/jobjo/popper/issues"
depends: [
  "ppx_deriving"
  "popper"
  "ocaml" {>= "4.09.1"}
  "dune" {>= "2.8"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/jobjo/popper.git"
